--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 </head>
 <body>
     <div id="container">
-        <input type="text" id="" placeholder="Digite uma tarefa">
-        <button>Adicionar</button>
+        <input type="text" id="input-task" placeholder="Digite uma tarefa">
+        <button id="btn-add-task">Adicionar</button>
 
         <ul>
             <li>
