--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
         <input type="text" id="input-task" placeholder="Digite uma tarefa">
         <button id="btn-add-task">Adicionar</button>
 
-        <ul>
-            <li>
+        <ul id="list-task">
+            <li class="task">
                 <img src="img/checked.png" alt="check-image">
                 <p>Jogar bola</p>
                 <img src="img/trash.png" alt="trash-image">
